--- a/DashBoard_App.ipynb
+++ b/DashBoard_App.ipynb
@@ -123,7 +123,7 @@
     "    \n",
     "    return X, y, msg\n",
     "\n",
-    "def fit_model(X, y, model = 'Log_Linear'):\n",
+    "def fit_model(X, y, HQ, model = 'Log_Linear'):\n",
     "    \n",
     "    variables = list(X.columns)[1:]\n",
     "    \n",
@@ -164,7 +164,10 @@
     "    \n",
     "    RMSE = RMSE.to_dict('records')\n",
     "    \n",
-    "    exists = path.exists('Regression results/RC_regression_estimations'+model+var_ID+'.tif')\n",
+    "    if HQ:\n",
+    "        exists = path.exists('Regression results/RC_regression_estimations'+model+var_ID+'_HQ.tif')\n",
+    "    else:\n",
+    "        exists = path.exists('Regression results/RC_regression_estimations'+model+var_ID+'.tif')\n",
     "        \n",
     "    if exists:\n",
     "        msg = 'Fitting model...\\nEstimating RC values...'\n",
@@ -180,14 +183,19 @@
     "                     model,\n",
     "                     X,\n",
     "                     exists,\n",
+    "                     HQ,\n",
     "                     name_file,\n",
     "                     crs = '3116',\n",
     "                     dataset_for_estimation_path = \"Dataset for regression/Houses_for_Rn_estimation_Cataster.txt\",\n",
-    "                     width_of_cells_for_aggregation = 200,\n",
+    "                     width_of_cells_for_aggregation = 120,\n",
     "                     ):\n",
     "    \n",
     "    if exists:\n",
     "        exists = exists\n",
+    "        if HQ:\n",
+    "            gdf = gpd.read_file('Regression results/Rn_estimations_'+name_file+'_HQ.geojson')\n",
+    "        else:\n",
+    "            gdf = gpd.read_file('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
     "    else:\n",
     "        df_RnModel = pd.read_table(dataset_for_estimation_path, delimiter = '\\t')\n",
     "\n",
@@ -229,20 +237,30 @@
     "        gdf = gdf.set_crs('EPSG:4326')\n",
     "        gdf = gdf.to_crs('EPSG:'+crs)\n",
     "        gdf = gdf.set_crs('EPSG:'+crs)\n",
-    "        gdf.to_file('Regression results/Rn_estimations_'+name_file+'.geojson', driver=\"GeoJSON\")\n",
+    "        \n",
+    "        if HQ:\n",
+    "            gdf.to_file('Regression results/Rn_estimations_'+name_file+'_HQ.geojson', driver=\"GeoJSON\")\n",
+    "        else:\n",
+    "            gdf.to_file('Regression results/Rn_estimations_'+name_file+'.geojson', driver=\"GeoJSON\")\n",
     "    \n",
     "    msg = 'Rasterizing point data and plotting map...'\n",
     "    \n",
-    "    return exists, msg\n",
+    "    return gdf, exists, msg\n",
     "\n",
-    "def rasterize(name_file,\n",
+    "def rasterize(gdf,\n",
+    "              name_file,\n",
     "              exists,\n",
+    "              HQ,\n",
     "              crs = '3116', \n",
-    "              res = 250):\n",
+    "              res = 300):\n",
     "        \n",
     "    if not exists:\n",
-    "        gdf = gpd.read_file('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
-    "        ds_points = ogr.Open('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
+    "        if HQ:\n",
+    "            ds_points = ogr.Open('Regression results/Rn_estimations_'+name_file+'_HQ.geojson')\n",
+    "            outfn = 'Regression results/RC_regression_estimations'+name_file+'_HQ.tif'\n",
+    "        else:\n",
+    "            ds_points = ogr.Open('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
+    "            outfn = 'Regression results/RC_regression_estimations'+name_file+'.tif'\n",
     "\n",
     "        ds_points\n",
     "        lyr = ds_points.GetLayer() \n",
@@ -253,7 +271,6 @@
     "        spatref.ImportFromEPSG(int(crs))\n",
     "        wkt = spatref.ExportToWkt()\n",
     "\n",
-    "        outfn = 'Regression results/RC_regression_estimations'+name_file+'.tif'\n",
     "        nbands = 1\n",
     "        nodata = 0\n",
     "        xres = res\n",
@@ -277,8 +294,12 @@
     "        gdal.RasterizeLayer(ds, [1], lyr, options=['ATTRIBUTE=Reg', 'ALL_TOUCHED=TRUE'])\n",
     "        ds.GetRasterBand(1).SetNoDataValue(nodata) \n",
     "        ds = None\n",
-    "    \n",
-    "        rc_array = rioxarray.open_rasterio('Regression results/RC_regression_estimations'+name_file+'.tif', band_as_variable=True)\n",
+    "        \n",
+    "        if HQ:\n",
+    "            rc_array = rioxarray.open_rasterio('Regression results/RC_regression_estimations'+name_file+'_HQ.tif', band_as_variable=True)\n",
+    "        else:\n",
+    "            rc_array = rioxarray.open_rasterio('Regression results/RC_regression_estimations'+name_file+'.tif', band_as_variable=True)\n",
+    "        \n",
     "        rc_df = rc_array.to_dataframe().reset_index()\n",
     "        rc_df[rc_df['band_1'] == 0] = np.nan\n",
     "        rc_df = rc_df.dropna()\n",
@@ -288,12 +309,18 @@
     "        rc_buf = rc_buf.to_crs('4326')\n",
     "        rc_pol = gpd.GeoDataFrame(rc_buf).join(rc_df).iloc[:,[1,0]]\n",
     "        rc_pol.columns = ['RC','geometry']\n",
-    "        \n",
-    "        rc_pol.to_file('Regression results/Rn_estimations_'+name_file+'_pol.geojson', driver=\"GeoJSON\")    \n",
+    "        if HQ:\n",
+    "            rc_pol.to_file('Regression results/Rn_estimations_'+name_file+'_pol_HQ.geojson', driver=\"GeoJSON\")    \n",
+    "        else:\n",
+    "            rc_pol.to_file('Regression results/Rn_estimations_'+name_file+'_pol.geojson', driver=\"GeoJSON\")    \n",
     "    else: \n",
-    "        rc_pol =  gpd.read_file('Regression results/Rn_estimations_'+name_file+'_pol.geojson')\n",
-    "        x_c = rc_pol.dissolve().centroid.x.mean()\n",
-    "        y_c = rc_pol.dissolve().centroid.y.mean()\n",
+    "        if HQ:\n",
+    "            rc_pol =  gpd.read_file('Regression results/Rn_estimations_'+name_file+'_pol_HQ.geojson')\n",
+    "        else:\n",
+    "            rc_pol =  gpd.read_file('Regression results/Rn_estimations_'+name_file+'_pol.geojson')\n",
+    "            \n",
+    "    x_c = rc_pol.dissolve().centroid.x.mean()\n",
+    "    y_c = rc_pol.dissolve().centroid.y.mean()\n",
     "    \n",
     "    msg = 'Done :)'\n",
     "    \n",
@@ -392,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c9988bfd-b0b8-43ff-96de-77b15839ceac",
    "metadata": {},
    "outputs": [
@@ -400,14 +427,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://127.0.0.1:8050/\n",
-      "Reading data...\n",
-      "Fitting model...\n",
-      "Estimating RC values...\n",
-      "\n",
-      "This will take some time...\n",
-      "\n",
-      "\n"
+      "Dash app running on http://127.0.0.1:8050/\n"
      ]
     }
    ],
@@ -441,6 +461,13 @@
     "                                                                   dcc.Dropdown(list(DF_RC.iloc[:,2:].columns), VIF_vars, id = 'vars_', style={'font-family' : 'bahnschrift' , 'width' : 340}, multi = True)\n",
     "                                                               ], style=dict(display='flex')),\n",
     "                                                               html.Div([],style = {'height': 10}),\n",
+    "                                                               html.Div([\n",
+    "                                                                   html.Plaintext('   High quality model:',  style={'font-family' : 'bahnschrift', 'width' : 170}),\n",
+    "                                                                   html.Div([\n",
+    "                                                                       html.Div([''], style = {'height':15}),\n",
+    "                                                                       daq.BooleanSwitch(id='HQ_model', on=False),\n",
+    "                                                                   ]),\n",
+    "                                                                   ], style=dict(display='flex', width = 440)),\n",
     "                                                               html.Div([\n",
     "                                                                   html.Div([\n",
     "                                                                               html.Plaintext('   Run model: ', style={'font-family' : 'bahnschrift', 'width' : 100}),\n",
@@ -483,7 +510,6 @@
     "                                                               html.Plaintext('   Reset modeling environment: ', style={'font-family' : 'bahnschrift'}),\n",
     "                                                               html.Button('RESET', style={'font-family' : 'bahnschrift','background-color':'darkred','font-size':'14px', 'border' : '0px',\n",
     "                                                                                                         'color': 'white','border-radius':'12px','width' : 100, 'height' :60},  id='RestartModel', n_clicks=0)\n",
-    "                                                               # daq.BooleanSwitch(id='RestartModel', on=False)\n",
     "                                                           ], style=dict(display='flex',width = 400))\n",
     "                                                        ],\n",
     "                                                           style=dict(display='flex',width = 1900)\n",
@@ -558,9 +584,9 @@
     "\n",
     "@app.callback(\n",
     "    Output('message', 'children'),\n",
-    "    [Input('Predict_Rn', 'n_clicks'), Input('model', 'value'), Input('vars_','value')]\n",
+    "    [Input('Predict_Rn', 'n_clicks'), Input('model', 'value'), Input('vars_','value'), Input('HQ_model','on')]\n",
     ")\n",
-    "def update_message(Predict_Rn, model, variables):\n",
+    "def update_message(Predict_Rn, model, variables, HQ):\n",
     "    \n",
     "    lst_clicks.append(Predict_Rn)\n",
     "    \n",
@@ -574,10 +600,16 @@
     "            var_ID += i[0]\n",
     "        lst_clicks.append(Predict_Rn)\n",
     "        \n",
-    "        if path.exists('Regression results/Rn_estimations_'+model+var_ID+'.geojson'):\n",
-    "            msg = 'This model has already been created. The results should be plotted in less than a minute.'\n",
+    "        if HQ:\n",
+    "            if path.exists('Regression results/Rn_estimations_'+model+var_ID+'_HQ.geojson'):\n",
+    "                msg = 'This model has already been created. The results should be plotted in less than a minute.'\n",
+    "            else:\n",
+    "                msg = '\"Modeling has started. Depending on the size of the dataset, this process will take more or less 30 minutes to plot the estimations...\"'\n",
     "        else:\n",
-    "            msg = '\"Modeling has started. Depending on the size of the dataset, this process will take more or less 10 minutes to plot the estimations...\"'\n",
+    "            if path.exists('Regression results/Rn_estimations_'+model+var_ID+'.geojson'):\n",
+    "                msg = 'This model has already been created. The results should be plotted in less than a minute.'\n",
+    "            else:\n",
+    "                msg = '\"Modeling has started. Depending on the size of the dataset, this process will take more or less 5 minutes to plot the estimations...\"'\n",
     "        return dmc.Notification(title=\"Hey there!\",\n",
     "                         id=\"simple-notify\",\n",
     "                         action=\"show\",\n",
@@ -594,10 +626,10 @@
     "\n",
     "@app.callback(\n",
     "    [Output('RC-model-map', 'figure'), Output('imp', 'data'), Output('RMSE', 'data'), Output('notif', 'children')],\n",
-    "    [Input('Predict_Rn','n_clicks'),Input('model', 'value'), Input('vars_','value')]\n",
+    "    [Input('Predict_Rn','n_clicks'),Input('model', 'value'), Input('vars_','value'), Input('HQ_model','on')]\n",
     ")\n",
     "\n",
-    "def update_map(Predict_Rn, model, vars_):\n",
+    "def update_map(Predict_Rn, model, vars_, HQ):\n",
     "    \n",
     "    lst_clicks_mp.append(Predict_Rn)\n",
     "    \n",
@@ -627,14 +659,27 @@
     "                         autoClose = 10*1000,\n",
     "                         icon=DashIconify(icon=\"akar-icons:circle-check\"),\n",
     "                        )\n",
-    "        X, y, msg = read_data(vars_)\n",
-    "        print(msg)\n",
-    "        imp, RMSE, mod, exists, name_file, msg = fit_model(X,y, model = model)\n",
-    "        print(msg)\n",
-    "        exists, msg = EstimatingValues(mod, model, X, exists, name_file)\n",
-    "        print(msg)\n",
-    "        rc_pol, y_c, x_c, msg = rasterize(name_file, exists)\n",
-    "        print(msg)\n",
+    "        \n",
+    "        if  HQ:    \n",
+    "            print('HQ')\n",
+    "            X, y, msg = read_data(vars_)\n",
+    "            print(msg)\n",
+    "            imp, RMSE, mod, exists, name_file, msg = fit_model(X,y,HQ, model = model)\n",
+    "            print(msg)\n",
+    "            gdf, exists, msg = EstimatingValues(mod, model, X, exists,HQ, name_file, width_of_cells_for_aggregation=400)\n",
+    "            print(msg)\n",
+    "            rc_pol, y_c, x_c, msg = rasterize(gdf, name_file, exists, HQ, res = 100)\n",
+    "            print(msg)\n",
+    "        else:\n",
+    "            print('LQ')\n",
+    "            X, y, msg = read_data(vars_)\n",
+    "            print(msg)\n",
+    "            imp, RMSE, mod, exists, name_file, msg = fit_model(X, y, HQ, model = model)\n",
+    "            print(msg)\n",
+    "            gdf, exists, msg = EstimatingValues(mod, model, X, exists, HQ, name_file)\n",
+    "            print(msg)\n",
+    "            rc_pol, y_c, x_c, msg = rasterize(gdf, name_file, exists, HQ)\n",
+    "            print(msg)\n",
     "\n",
     "        fig = px.choropleth_mapbox(rc_pol,\n",
     "                                    geojson=rc_pol.geometry,\n",
@@ -664,15 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b3f82e-c46f-47ce-bfba-6252f3b20750",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00f3bb10-2f23-41e6-9254-b23b3a241aa1",
+   "id": "4d35f37e-28e8-455c-8c2c-ad32632488b6",
    "metadata": {},
    "outputs": [],
    "source": []
