--- a/DashBoard_App.ipynb
+++ b/DashBoard_App.ipynb
@@ -394,7 +394,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://127.0.0.1:8070/\n"
+      "Dash app running on http://127.0.0.1:8070/\n",
+      "1 0\n",
+      "2 0\n",
+      "3 0\n",
+      "prev\n",
+      "4 0\n",
+      "prev\n",
+      "5 0\n",
+      "prev\n",
+      "6 0\n",
+      "prev\n",
+      "7 0\n",
+      "prev\n",
+      "8 0\n",
+      "prev\n",
+      "9 0\n",
+      "prev\n",
+      "10 0\n",
+      "prev\n",
+      "11 0\n",
+      "prev\n",
+      "12 1\n",
+      "Reading data...\n",
+      "Fitting model...\n",
+      "Estimating RC values...\n",
+      "Done :)\n"
      ]
     }
    ],
@@ -521,36 +546,45 @@
     "                                                    style = {'width' : 450}\n",
     "                                                   ), \n",
     "                                           html.Div([''], style = {'width':20, 'background-color':color}),\n",
-    "                                           html.Div([dcc.Graph(id='RC-histogram',\n",
-    "                                                               style = {'height' : 470, 'width' : 995}\n",
-    "                                                              ),\n",
+    "                                           html.Div([dcc.Loading(id = 'loadg', \n",
+    "                                                                 children = [dcc.Graph(id='RC-histogram',\n",
+    "                                                                                       style = {'height' : 470, 'width' : 995}\n",
+    "                                                                                      ),]\n",
+    "                                                                ),\n",
     "                                                     html.Div([''], style = {'width':20, 'background-color':color}),\n",
-    "                                                     dcc.Graph(id = 'FS_out',\n",
-    "                                                               style = {'height' : 470, 'width' : 400}\n",
-    "                                                              )\n",
+    "                                                     dcc.Loading(id = 'ld',\n",
+    "                                                                 children = [dcc.Graph(id = 'FS_out', style = {'height' : 470, 'width' : 400})]),\n",
     "                                                    ],\n",
     "                                                    style=dict(display='flex'))\n",
     "                                          ],\n",
     "                                          style=dict(display='flex')),\n",
     "                                 html.Div([''],style = {'height':20, 'background-color':color}),\n",
     "                                 html.Div([html.Div([''], style = {'width':20}),\n",
-    "                                           html.Div([html.H5(' Regression results: ',\n",
-    "                                                             style={'font-family' : 'bahnschrift'}\n",
-    "                                                            ),\n",
-    "                                                     dash_table.DataTable(id= 'imp',\n",
-    "                                                                          style_table={'width' : 440}\n",
-    "                                                                         ),\n",
-    "                                                     html.H6(' Cross-validation score:', style={'font-family' : 'bahnschrift'}),\n",
-    "                                                     dash_table.DataTable(id= 'RMSE',\n",
-    "                                                                          style_table={'width' : 440}\n",
-    "                                                                         )\n",
-    "                                                    ]\n",
-    "                                                   ),\n",
+    "                                           dcc.Loading(id='loadRes',\n",
+    "                                                      children = [html.Div([html.H5(' Regression results: ',\n",
+    "                                                                                    style={'font-family' : 'bahnschrift'}\n",
+    "                                                                                   ),\n",
+    "                                                                            dash_table.DataTable(id= 'imp',\n",
+    "                                                                                                 style_header={'backgroundColor': color, 'color':'black','fontWeight': 'bold'},\n",
+    "                                                                                                 style_cell={'textAlign': 'center', 'backgroundColor':'lightgray', 'color':'black'},\n",
+    "                                                                                                 style_table={'width':440}, cell_selectable = False, style_as_list_view=True\n",
+    "                                                                                                ),\n",
+    "                                                                            html.H6(' Cross-validation score:', style={'font-family' : 'bahnschrift'}),\n",
+    "                                                                            dash_table.DataTable(id= 'RMSE',\n",
+    "                                                                                                 style_header={'backgroundColor': color, 'color':'black','fontWeight': 'bold'},\n",
+    "                                                                                                 style_cell={'textAlign': 'center', 'backgroundColor':'lightgray', 'color':'black'},\n",
+    "                                                                                                 style_table={'width':440}, cell_selectable = False, style_as_list_view=True\n",
+    "                                                                                                )\n",
+    "                                                                           ]\n",
+    "                                                                          )\n",
+    "                                                                 ]\n",
+    "                                                      ),\n",
     "                                           html.Div([''],style={'width':10}),\n",
     "                                           html.Div([''],style={'width':20, 'background-color':color}),\n",
-    "                                           dcc.Graph(id='RC-model-map',\n",
-    "                                                     style = {'height' : 540, 'width' : 1460},\n",
-    "                                                     config = {'displayModeBar': False})\n",
+    "                                           dcc.Loading(id = 'load',\n",
+    "                                                       children = [dcc.Graph(id='RC-model-map',\n",
+    "                                                                             style = {'height' : 520, 'width' : 1415},\n",
+    "                                                                             config = {'displayModeBar': True})])\n",
     "                                          ],\n",
     "                                          style=dict(display='flex')\n",
     "                                         ),\n",
@@ -708,6 +742,8 @@
     "    \n",
     "    lst_clicks_mp.append(Predict_Rn)\n",
     "    \n",
+    "    print(len(lst_clicks_mp), Predict_Rn)\n",
+    "    \n",
     "    if ((Predict_Rn == 0)&(len(lst_clicks_mp) == 2)):\n",
     "        df = pd.DataFrame([[0,-72]])\n",
     "        df_ = pd.DataFrame(['  '])\n",
@@ -721,6 +757,7 @@
     "                          mapbox_zoom = 1.5)\n",
     "        \n",
     "    elif (lst_clicks_mp[-1] == lst_clicks_mp[-2]):\n",
+    "        print('prev')\n",
     "        raise PreventUpdate\n",
     "        \n",
     "    elif (lst_clicks_mp[-1] > lst_clicks_mp[-2]):\n",
